argo-cd-localk8s/ingress-dex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-dex-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.zenvo.ai
      secretName: argocd-server-tls # as expected by argocd-server
  rules:
    - host: argocd.zenvo.ai
      http:
        paths:
          - path: /dex/callback
            pathType: Prefix
            backend:
              service:
                name: argocd-dex-server
                port:
                  name: https
